Remove view profile from doctor modal and fix location subtitle visibility

--- a/src/main.scss
+++ b/src/main.scss
@@ -236,3 +236,15 @@ main {
     transform: translate(0, 0);
   }
 }
+
+.section.map-section {
+  .section-title.reveal {
+    p {
+      color: $text-color !important;
+      opacity: 1;
+    }
+  }
+}
+
+
+
